# Homelab-Dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py  seed.py
backend/app/dependencies/: auth.py
backend/app/models/: service.py
backend/app/routers/: auth.py  events.py  resources.py  services.py
backend/app/schemas/: auth.py  event.py  resources.py  service.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_health.py  test_resources.py  test_services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: fetch.ts
frontend/src/components/: StatusCard.css  StatusCard.tsx
frontend/src/components/auth/: AuthProvider.tsx  ProtectedRoute.css  ProtectedRoute.tsx
frontend/src/components/dashboard/: DashboardWidget.css  DashboardWidget.tsx  ResourceUsageProvider.tsx
frontend/src/components/layout/: AppLayout.css  AppLayout.tsx  Header.css  Header.tsx  MainContent.css  MainContent.tsx  Sidebar.css  Sidebar.tsx
frontend/src/constants/: serviceIcons.ts
frontend/src/hooks/: useAuth.ts  useResourceUsage.ts  useTheme.ts
frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  LoginPage.css  LoginPage.tsx  PlaceholderPage.css  PlaceholderPage.tsx  ServicesPage.css  ServicesPage.tsx
frontend/src/styles/: theme.css
frontend/src/types/: auth.ts  event.ts  resource.ts  service.ts
(+12 files in other folders)
